[package]
name = "vt6term"
version = "0.1.0"
authors = ["Stefan Majewsky <majewsky@gmx.net>"]

[dependencies]
vt6 = { path = "../vt6.rs" }

# event loop
simple-signal = "1.1.0"
futures = "^0.1.18"
tokio = "^0.1"
tokio-core = "^0.1"
tokio-io = "^0.1"
tokio-uds = "^0.1"

# logging
log = { version = "^0.4", features = [ "max_level_trace", "release_max_level_info" ] }
simple_logger = "^0.5"
