[package]
name = "vt6term"
version = "0.1.0"
authors = ["Stefan Majewsky <majewsky@gmx.net>"]
[dependencies]
vt6 = { path = "../vt6.rs" }

# event loop
futures = "^0.1.18"
tokio = "^0.1"
tokio-io = "*"
tokio-uds = "*"

# logging
log = { version = "^0.4", features = [ "max_level_trace", "release_max_level_info" ] }
simple_logger = "^0.5"

# GUI
gdk = "*"
gtk = { version = "*", features = [ "v3_10" ] }
cairo-rs = "*"
glib = "*"
pango = "*"
pangocairo = "*"

# misc
bitflags = "1"
nix = "^0.11"
