[package]
name = "6term"
version = "0.1.0"
authors = ["Stefan Majewsky <majewsky@gmx.net>"]
[dependencies]
vt6 = { path = "../vt6.rs/vt6" }
vt6tokio = { path = "../vt6.rs/vt6tokio" }

# event loop (NOTE: vt6tokio has more specific dependency requirements)
futures = "*"
tokio = "*"

# logging
log = { version = "^0.4", features = [ "max_level_trace", "release_max_level_info" ] }
simple_logger = "^0.5"

# GUI
gdk = "*"
gtk = { version = "*", features = [ "v3_10" ] }
cairo-rs = "*"
glib = "*"
pango = "*"
pangocairo = "*"

# misc
nix = "^0.11"
vte = "^0.3"
